--- a/html/style.css
+++ b/html/style.css
@@ -101,10 +101,26 @@ h1{
 
 
 
+.middlebox
+{
+    position: relative;
+    left: 28%;
+    width: 0%;
+    border-width: 0.1%;
+    border-radius: 0.1%;
+    align-items: center;
 
 
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    column-gap: 20px;
+    row-gap: 20px;
 
-#picturebox {
+  
+}
+
+.picturebox {
     margin: 0;
     border-style: hidden;
     border-color: black;
@@ -112,28 +128,22 @@ h1{
     border-radius: 0;
     padding: 0px;
     display: block;
-    left: 30%;
     position:relative;
-    top: 30%;
-    width: 40%;
 }
 
 
 
-#videobox {
+.videobox {
     border-style: hidden;
     border-color: black;
-    border-width: 0.1%;
-    border-radius: 0.1%;
     padding: 0px;
     display: block;
-    height: 50%;
-    left: 25%;
-    position:relative;
-    top: 5%;
-    width: 50%;
 }
 
+#youtubebox
+{
+    width: 100%;
+}
 
 
 
@@ -144,7 +154,7 @@ h1{
 }
 
 .fa-instagram{
-    color: pink;
+    color: white;
 }
 
 .fa-youtube{
